--- a/css/index.css
+++ b/css/index.css
@@ -259,15 +259,18 @@ ul li {
         margin-top: 80px;
     }
     nav {
-        width: 100%;
+        display: flex;
+        flex-flow: row;
     }
-    nav {
-        display: inline-block;
-    }
-    nav img {
+    nav a.hover {
+        order: 1;
         display: block;
-        padding-bottom: 15px;
-        margin-left: -300px;
+        margin-top: 65px;
+    }
+    nav a.img {
+        order: -1;  
+        position: absolute;
+        top: 0;
     }
     .container {
         display: flex;
@@ -283,6 +286,12 @@ ul li {
         width: 90%;
         margin: 0 auto;
     }
+    .container .middle-img {
+        width: 120%;
+    }
+    .services-top img {
+        width: 100%;
+    }
 }
 @media only screen and (max-width: 500px) {
     main {
@@ -292,16 +301,23 @@ ul li {
         display: none;
     }
     nav {
+        width: 100%;
         display: flex;
         flex-flow: column;
     }
     nav a {
-        display: block;
+        display: inline-block;
         width: 90%;
         text-align: center;
-        margin: 0 auto;
     }
     nav a.hover {
+        margin-top: 0;
+        order: 1;
+        border-bottom: 1px solid black;
+    }
+    nav a.hover:nth-child(1) {
+        margin-top: 55px;
+        margin-bottom: 0;
         order: 1;
         border-bottom: 1px solid black;
     }
@@ -329,5 +345,8 @@ ul li {
    }
    .container .middle-img {
         width: 100%;
+   }
+   .services-top img, .services-bottom img {
+       width: 100%;
    }
 } 
